HEAD
	+ Don't use owner module in external-ip.pl script
	+ Changed failover firewall rules to not use owner module
	+ Fixed bug which made impossible to edit pppoe gateways
3.2.4
	+ Update strings to new offering
	+ ppp-set-iface.pl script should not regen gateway if we are saving changes
	+ Flush interfaces list cache after all ifups and all ifdowns
	+ Added missing EBox::Exceptions uses
3.2.3
	+ Write resolvconf head, base and tail
	+ Set proper file name for HTTP proxy configuration for APT
	+ Set HTTP proxy wide settings in /etc/environment
	+ Do not disable DNSResolver model when users mode is external AD
	+ Added resolvconf as dependency to avoid problems in installations
	  without the ubuntu-minimal metapackage
3.2.2
	+ Fixed search domain regression after resolvconf changes
3.2.1
	+ Use new resolvconf framework to manage resolvers list
	+ Fix setNameservers method in Network to avoid error in import
	  interfaces
3.2
	+ Set version to 3.2
3.1.6
	+ Guard against undefined rows getting auto value in GatewayTable
3.1.5
	+ Fix addition of gateways in initial configuration wizard
	+ Override daemons when migrating from 3.0
3.1.4
	+ Adapted to new CSS styles
	+ Use upstart for ddclient daemon management
3.1.3
	+ Clearer messages for gateway not reachable condition
	+ Fixed bug which unallowed to disable the proxy server
	+ Fix regression is Gateways table due to the change of behaviour
	  of update row notifications
	+ Added menu icon
	+ Fix regression in dhcp-gateway.pl which interfered with save
	  change process
	+ Increase regenGateways() timeout from 60 to 180 seconds
	+ Add zentyal-users to package breaks control to avoid errors with
	  bad users version
	+ Fixed regression in external interface check in Network -> Interfaces
	  after having nginx as source of all requests to apache
	+ Warning in initial configuration wizard when trying to set as external
	  the interface used to access the administration interface