@@ -22,11 +22,6 @@ $scripts/ppp-set-iface.pl $eth_iface $ppp_iface $local_address
 
 $scripts/dhcp-address.pl $eth_iface $local_address 255.255.255.255
 
-if [ $USEPEERDNS -eq 1 ]
-then
-    $scripts/dhcp-nameservers.pl $eth_iface $DNS1 $DNS2
-fi
-
 # Regenerate firewall rules
 firewall_script=/usr/share/zentyal-firewall/dhcp-firewall.pl
 [ -x $firewall_script ] && $firewall_script
