@@ -1,4 +1,6 @@
 HEAD
+	+ Fixed some issues with showing of DHCP nameservers and removed
+	  related dead code
 	+ Don't use owner module in external-ip.pl script
 	+ Changed failover firewall rules to not use owner module
 	+ Fixed bug which made impossible to edit pppoe gateways
